--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,7 @@
       }
     ],
     "react/prop-types": 0,
-    "object-curly-spacing": "error",
+    "object-curly-spacing": ["error", "always"],
     "react/no-unescaped-entities": 0,
     "semi": ["error", "never"]
   }
