--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,12 @@
 		"typeRoots": [
 			"./node_modules/@types"
 		],
-		"jsx": "react-jsx"
+		"jsx": "react-jsx",
+    "baseUrl": "src",
+		"paths": {
+			"@styles/*": ["styles/*"],
+			"@models/*": ["models/*"]
+		}
 	},
 	"include": [
 		"src/**/*.ts",
@@ -21,6 +26,7 @@
 		"test/**/*.tsx"
 	],
 	"exclude": [
-		"node_modules"
+		"node_modules",
+		"build"
 	]
 }
