--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-dom": "^19.0.2",
     "cra-template": "1.2.0",
     "devicon": "^2.16.0",
+    "eslint-import-resolver-typescript": "^4.3.2",
+    "eslint-plugin-import": "^2.31.0",
     "node": "^18.18.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
